--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "require": {
         "php": ">=8.0",
         "ext-zip": "*",
-        "symfony/console": "^5.4|^6.3",
-        "symfony/process": "^5.4|^6.3"
+        "symfony/console": "^5.4|^6.3|^7.0",
+        "symfony/process": "^5.4|^6.3|^7.0"
     },
     "require-dev": {
         "brainmaestro/composer-git-hooks": "dev-master",
